objects/CMN_LogUserFilter__mdt.object
<CustomObject>
    <description>Determine what log levels are logged and optionally, for what users. Asterisk &quot;*&quot; means all users.
Note: log writing access levels are based on least-restrictive principal.</description>
    <fields>
        <fullName>CMN_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate whether this filter will be applied</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_LogLevel__c</fullName>
        <description>Specify which Log levels to be logged.</description>
        <inlineHelpText>INFO, DEBUG, WARN, ERROR</inlineHelpText>
        <label>Active Log Levels</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_LogUser__c</fullName>
        <defaultValue>&quot;*&quot;</defaultValue>
        <description>The log record filtering applies only when this user is the active user. Use * for all users.</description>
        <label>Active Log User</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_UserType__c</fullName>
        <description>Select the CMN User Type</description>
        <label>Active User Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All Users</label>
                </value>
                <value>
                    <fullName>UserId</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Username</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log User Filter</label>
    <listViews>
        <fullName>CMN_AllLogUserFilters</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>CMN_Active__c</columns>
        <columns>CMN_LogLevel__c</columns>
        <columns>CMN_LogUser__c</columns>
        <columns>CMN_UserType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Log User Filters</label>
    </listViews>
    <pluralLabel>Log User Filters</pluralLabel>
</CustomObject>